# video

./: .gitignore  CHANGELOG.md  README.md  changelog-option.cjs  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  updater.mjs  vite.config.js
.github/actions/: build.sh
.github/actions/build-for-linux/: action.yml
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/initData/: shortcut.json  sites.json
src-tauri/src/: conf.rs  main.rs  schema.rs  utils.rs
src-tauri/src/app/: menu.rs  mod.rs  setup.rs
src-tauri/src/data/: channel.rs  data_source_con.rs  download_info.rs  history.rs  mod.rs  search_record.rs  shortcut.rs  site.rs  star.rs  website_parse.rs
src-tauri/src/download/: file_download.rs  m3u8.rs  m3u8_encrypt_key.rs  mod.rs  queue.rs  util.rs
src-tauri/src/internet/: bashrc_util.rs  mac_util.rs  mod.rs  proxy_server.rs  reg_util.rs
src/api/: douban.js  fetch.js  iptv.js  movies.js
src/assets/scss/: style.scss  theme.scss
src/assets/scss/theme/: dark.scss  light.scss
src/business/: download.js  iptv.js  movie.js  play.js
src/components/: Aside.vue  HomeDragbtn.vue  ImageLazy.vue  SvgIcon.vue  WinTool.vue
src/pages/: Detail.vue  Download.vue  EditSites.vue  History.vue  IPTV.vue  Movie.vue  Movies.vue  Play.vue  Setting.vue  Share.vue  Star.vue
src/store/: download.js  history.js  index.js  iptv.js  movie.js  movies.js  star.js
src/util/: date.js  index.js
updater/: updater.mjs
