[package]
name = "vop"
version = "0.0.2"
description = "VideoOnlinePlay"
authors = ["fangcy"]
license = "GPLv3"
repository = "https://github.com/fangcongyang/video"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
lazy_static = "1.4.0"
lru = "0.10.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
anyhow = "1.0.66"
window-shadows = "0.2.1"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-positioner = { git = "https://github.com/lencx/tauri-plugins-workspace", features = ["system-tray"] }
m3u8-rs = "5.0.4"
rust-crypto = "0.2.36"
aes-stream = "0.2.1"
reqwest = { version = "0.11.18", features = ["json"] }
url = { version = "2", features = ["serde"] }
colored = "2.0.4"
futures = "0.3"
pinyin = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
